--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,12 +1,14 @@
 <!-- Defines the menu item that will appear on the Action Bar in MainActivity -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:galacticon="http://schemas.android.com/tools">
 
   <!-- Share item -->
   <item
-      android:id="@+id/menu_item_share"
-      android:title="@string/share"
-      app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
-      app:showAsAction="ifRoom" />
+      android:id="@+id/menu_item"
+      android:icon="@drawable/grid"
+      android:orderInCategory="300"
+      android:title="@string/change_layout_manager"
+      galacticon:showAsAction="ifRoom" />
 
 </menu>
