--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,9 @@
 
     <ListView
         android:id="@+id/main_listview"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
         android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false"
-        android:paddingLeft="20dp" />
+        android:headerDividersEnabled="false" />
 </LinearLayout>
