--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
   <color name="colorAccent">#FF4081</color>
 
   <color name="black_overlay">#66000000</color>
+  <color name="color_primary">#9B26AF</color>
+  <color name="color_primary_dark">#89229b</color>
+  <color name="text_color_primary">#ffffff</color>
+  <color name="forecast_grid_background">#89bef2</color>
 </resources>
