--- a/app/src/main/res/layout-land/recyclerview_item_row.xml
+++ b/app/src/main/res/layout-land/recyclerview_item_row.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="3"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/itemImage"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
         android:paddingTop="10dp"
         app:srcCompat="@drawable/ic_books" />
 
@@ -20,7 +21,7 @@
         android:layout_weight="3"
         android:orientation="vertical">
 
-         <TextView
+        <TextView
             android:id="@+id/itemDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
