--- a/app/src/main/res/layout-land/recyclerview_item_row.xml
+++ b/app/src/main/res/layout-land/recyclerview_item_row.xml
@@ -2,43 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="3"
-    android:orientation="horizontal">
+    android:layout_height="280dp"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/itemImage"
+        android:layout_width="200dp"
+        android:layout_height="145dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@android:string/unknownName" />
+
+    <TextView
+        android:id="@+id/itemDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        app:srcCompat="@drawable/ic_books" />
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:maxLines="4" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/itemDate"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/itemDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="5"
-            android:padding="20dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/itemDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:text="TextView"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20dp" />
-    </LinearLayout>
+        android:layout_gravity="center|start"
+        android:layout_marginStart="10dp"
+        android:background="@color/colorPrimaryDark"
+        android:padding="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:textColor="@color/text_color_primary"
+        android:textSize="18sp" />
 
 </LinearLayout>
