--- a/app/src/main/res/layout/recyclerview_item_row.xml
+++ b/app/src/main/res/layout/recyclerview_item_row.xml
@@ -2,42 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="3"
+    android:layout_height="170dp"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/itemImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        app:srcCompat="@drawable/ic_books" />
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="true"/>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/itemDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp" />
 
-         <TextView
-            android:id="@+id/itemDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="5"
-            android:padding="20dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/itemDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:text="TextView"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20dp" />
-    </LinearLayout>
-
+    <TextView
+        android:id="@+id/itemDate"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_gravity="center|start"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorPrimary"
+        android:ellipsize="end"
+        android:maxLines="5"
+        android:textColor="@color/text_color_primary" />
 </LinearLayout>
