--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -3,4 +3,12 @@
        (such as screen margins) for screens with more than 820dp of available width. This
        would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
   <dimen name="activity_horizontal_margin">64dp</dimen>
+  <dimen name="title_text_size">30sp</dimen>
+  <dimen name="subtitle_text_size">24sp</dimen>
+  <dimen name="body_text_size">20sp</dimen>
+  <dimen name="horizontal_padding">16dp</dimen>
+  <dimen name="vertical_padding">16dp</dimen>
+  <dimen name="horizontal_margin">16dp</dimen>
+  <dimen name="vertical_margin">16dp</dimen>
+  <dimen name="tabs_height">48dp</dimen>
 </resources>
