--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
   <color name="color_primary_dark">#89229b</color>
   <color name="text_color_primary">#ffffff</color>
   <color name="forecast_grid_background">#89bef2</color>
+  <color name="colorTitle">#000000</color>
 </resources>
