Material design with custom animations

--- a/app/src/main/res/layout/row_main.xml
+++ b/app/src/main/res/layout/row_main.xml
@@ -9,10 +9,11 @@
         android:id="@+id/text_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fontFamily="serif-monospace"
+        android:fontFamily="Helvetica"
         android:maxLines="2"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="1dp"
+        android:paddingTop="15dp"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
