--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,9 @@
   <dimen name="horizontal_margin">16dp</dimen>
   <dimen name="vertical_margin">16dp</dimen>
   <dimen name="tabs_height">48dp</dimen>
+  <dimen name="card_corner_radius">0dp</dimen>
+  <dimen name="card_elevation">1dp</dimen>
+  <dimen name="floating_button_size">60dp</dimen>
+  <dimen name="button_elevation">1dp</dimen>
+  <dimen name="button_press_elevation">18dp</dimen>
 </resources>
