--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minHeight="176dp"
-    tools:context="com.example.keshavanarasappa.androidproject.User.LoginActivity">
+    tools:context="com.example.keshavanarasappa.androidproject.user.LoginActivity">
 
     <Button
         android:id="@+id/registerButton"
@@ -18,6 +18,7 @@
         android:text="@string/register"
         android:textAlignment="center"
         android:textSize="18sp"
+        android:background="@drawable/round_corners_background_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +35,7 @@
         android:text="@string/logged_in"
         android:textAlignment="center"
         android:textSize="18sp"
+        android:background="@drawable/round_corners_background_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
@@ -44,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="Email Id:"
+        android:text="@string/email_id"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,7 +58,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/emailTextView"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
-        android:text="Password:"
+        android:text="@string/password"
         app:layout_constraintStart_toStartOf="@+id/emailTextView"
         app:layout_constraintTop_toBottomOf="@+id/emailTextView" />
 
