--- a/app/src/main/res/layout/activity_recyler.xml
+++ b/app/src/main/res/layout/activity_recyler.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
@@ -7,4 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"/>
-</LinearLayout>
+
+    <include layout="@layout/progress_bar" />
+
+</android.support.constraint.ConstraintLayout>
