--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
     <!-- Displays keyboard when touched -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="69dp"
         android:orientation="horizontal">
 
         <TextView
@@ -15,22 +15,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp" />
+
         <EditText
             android:id="@+id/mainEdittext"
-            android:layout_width="wrap_content"
+            android:layout_width="234dp"
+            android:inputType="text"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:hint="@string/hint" />
 
         <Button
             android:id="@+id/mainButton"
-            android:layout_width="wrap_content"
+            android:layout_width="103dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="@string/button"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/round_corners_background_green"
+            android:text="@string/activity_search"
+            android:textSize="@dimen/body_text_size"
             tools:text="Search" />
     </LinearLayout>
 
+    <include layout="@layout/progress_bar" />
     <GridView
         android:id="@+id/mainGridview"
         android:layout_width="wrap_content"
