--- a/app/src/main/res/layout/content_mlkit_firebase.xml
+++ b/app/src/main/res/layout/content_mlkit_firebase.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ML_Firebase.MLKitFirebaseActivity">
+    tools:context=".mlfirebase.MLKitFirebaseActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -17,7 +17,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="parent" />
 
-    <com.example.keshavanarasappa.androidproject.ML_Firebase.GraphicOverlay
+    <com.example.keshavanarasappa.androidproject.mlfirebase.GraphicOverlay
         android:id="@+id/overlay"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -28,15 +28,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <include layout="@layout/progress_bar" />
 
 </android.support.constraint.ConstraintLayout>
