Implemented Room database with View data bindin with Recycler view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,12 @@
   <color name="photo_tint">#7f101010</color>
   <color name="light_green">#ABE4BE</color>
   <color name="green">#2AB558</color>
+
+  <color name="primaryLightColor">#7ca0b4</color>
+  <color name="secondaryLightColor">#c4659e</color>
+  <color name="secondaryDarkColor">#600045</color>
+  <color name="primaryTextColor">#ffffff</color>
+  <color name="secondaryTextColor">#ffffff</color>
+  <color name="listItemsTextColor">#757575</color>
+
 </resources>
