--- a/app/src/main/res/drawable/icn_morph.xml
+++ b/app/src/main/res/drawable/icn_morph.xml
@@ -2,12 +2,12 @@
 <animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:drawable="@drawable/icn_add">
     <target
-        android:animation="@anim/path_morph"
+        android:animation="@animator/path_morph"
         android:name="sm_vertical_line" />
     <target
-        android:animation="@anim/path_morph_lg"
+        android:animation="@animator/path_morph_lg"
         android:name="lg_vertical_line" />
     <target
-        android:animation="@anim/fade_out"
+        android:animation="@animator/fade_out"
         android:name="horizontal_line" />
 </animated-vector>
