--- a/app/src/main/res/drawable/icn_morph_reverse.xml
+++ b/app/src/main/res/drawable/icn_morph_reverse.xml
@@ -2,12 +2,12 @@
 <animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:drawable="@drawable/icn_add">
     <target
-        android:animation="@anim/path_morph_reverse"
+        android:animation="@animator/path_morph_reverse"
         android:name="sm_vertical_line"/>
     <target
-        android:animation="@anim/path_morph_lg_reverse"
+        android:animation="@animator/path_morph_lg_reverse"
         android:name="lg_vertical_line" />
     <target
-        android:animation="@anim/fade_in"
+        android:animation="@animator/fade_in"
         android:name="horizontal_line" />
 </animated-vector>
