--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,8 +29,8 @@
   </style>
 
   <style name="DialogAnimation">
-    <item name="android:windowEnterAnimation">@anim/slide_up</item>
-    <item name="android:windowExitAnimation">@anim/slide_down</item>
+    <item name="android:windowEnterAnimation">@animator/slide_up</item>
+    <item name="android:windowExitAnimation">@animator/slide_down</item>
   </style>
 
 </resources>
