Implemented Video play, PIP

--- a/app/src/main/res/layout/row_main.xml
+++ b/app/src/main/res/layout/row_main.xml
@@ -10,10 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fontFamily="Helvetica"
+        android:gravity="center_vertical"
         android:maxLines="2"
+        android:paddingEnd="20dp"
         android:paddingStart="20dp"
-        android:paddingEnd="1dp"
-        android:paddingTop="15dp"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
