--- a/app/src/main/res/layout/activity_material_design_detail.xml
+++ b/app/src/main/res/layout/activity_material_design_detail.xml
@@ -28,7 +28,8 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:inputType="" />
 
         </LinearLayout>
 
