--- a/app/src/main/res/menu/main_list.xml
+++ b/app/src/main/res/menu/main_list.xml
@@ -1,7 +1,6 @@
 <!-- Defines the menu item that will appear on the Action Bar in MainActivity -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:galacticon="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <!-- Share item -->
   <item
