--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,6 @@
   <color name="background_from">#2F312E</color>
   <color name="background_to">#CB16C8</color>
 
+  <color name="bgBottomNavigation">#fe485a</color>
+
 </resources>
