--- a/app/src/main/res/layout/activity_bottom_navbar.xml
+++ b/app/src/main/res/layout/activity_bottom_navbar.xml
@@ -5,12 +5,22 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".bottomnavbar.BottomNavbarActivity">
 
-    <FrameLayout
-        android:id="@+id/frame_container"
+    <ImageView
+        android:id="@+id/imagePreview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
+        android:scaleType="centerCrop" />
+
+    <com.example.keshavanarasappa.androidproject.bottomnavbar.NonSwipeableViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginTop="400dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.BottomNavigationView
@@ -18,8 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:itemBackground="@color/bgBottomNavigation"
+        android:background="@color/bgBottomNavigation"
         android:foreground="?attr/selectableItemBackground"
         app:itemIconTint="@android:color/white"
         app:itemTextColor="@android:color/white"
