--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="horizontal_margin">16dp</dimen>
     <dimen name="vertical_margin">16dp</dimen>
     <dimen name="tabs_height">48dp</dimen>
+    <dimen name="thumbnail_size">80dp</dimen>
 </resources>
