--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -13,6 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
+            android:contentDescription="@string/photo_image_view"
             android:scaleType="centerCrop" />
 
         <TextView
@@ -21,7 +22,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
-            android:layout_marginTop="6dp" />
+            android:layout_marginTop="6dp"
+            android:padding="10dp"
+            android:textAlignment="viewStart"
+            android:textSize="22sp" />
 
     </LinearLayout>
 </ScrollView>
