--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,12 @@
     <dimen name="padding_10">10dp</dimen>
     <dimen name="margin_horizontal">16dp</dimen>
     <dimen name="lbl_edit_image_control">100dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_text_size_big">22sp</dimen>
+
 </resources>
