--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,4 +50,28 @@
 
   <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+  <style name="WidgetTextView">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:textColor">@color/colorAccent</item>
+    <item name="android:gravity">center</item>
+  </style>
+
+  <style name="WidgetTextView.Big">
+    <item name="android:textSize">@dimen/widget_text_size_big</item>
+    <item name="android:textColor">@color/primaryTextColor</item>
+  </style>
+
+  <style name="WidgetButtonHorizontalSpace">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">match_parent</item>
+    <item name="android:layout_weight">1</item>
+  </style>
+
+  <style name="WidgetButtonVerticalSpace">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:layout_weight">1</item>
+  </style>
+
 </resources>
