--- a/app/src/main/res/layout/activity_tabbar.xml
+++ b/app/src/main/res/layout/activity_tabbar.xml
@@ -14,16 +14,16 @@
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Left" />
+            android:text="@string/left" />
 
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Center" />
+            android:text="@string/center" />
 
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Right" />
+            android:text="@string/right" />
     </android.support.design.widget.TabLayout>
 </android.support.v4.view.ViewPager>
