--- a/app/src/main/res/values-v14/dimens.xml
+++ b/app/src/main/res/values-v14/dimens.xml
@@ -6,5 +6,11 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">0dp</dimen>
+    <dimen name="large_margin">32dp</dimen>
+    <dimen name="default_margin">16dp</dimen>
+    <dimen name="description_text_size">22sp</dimen>
+    <dimen name="title_text_size">32sp</dimen>
+    <dimen name="moving_image_size">36dp</dimen>
+
 
 </resources>
